# GhostMint---ZK-NFT-Minting

./: Anchor.toml  LICENSE  Nargo.toml  Prover.toml  README.md  generate_all_proofs.sh  mintghost.proof  my.proof  my.raw.proof
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  page.tsx.bak  providers.tsx
frontend/app/api/prove/: route.ts
frontend/app/mint/: page.tsx
frontend/app/problem/: page.tsx
frontend/app/roadmap/: page.tsx
frontend/app/solution/: page.tsx
frontend/lib/: browser_prover.ts
frontend/public/: circuit.json  mintghost.pw  permits.json  proofs.json
frontend/public/generated_proofs/: 1001.proof  1002.proof  1003.proof  1004.proof  1005.proof  1005.pw
programs/mintghost/: Cargo.toml
programs/mintghost/src/: lib.rs
sdk/: package-lock.json  package.json  permits_5.json
sdk/src/: build_permits.ts  claim_test.ts  client.ts  generate_permits.ts  merkle.ts  mint_test.ts  mintghost.json  prover.ts  test.ts  update_root.ts
src/: main.nr
